--- a/Formulario.html
+++ b/Formulario.html
@@ -1,5 +1,5 @@
 <fieldset>
-    <Legend>formulario</Legend>
+    <Legend>Formulario</Legend>
     <form>
        <label>Nombre</label><br>
        <Input type="text" placeholder="Ingrese su Nombre"><br>
