--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><a href="formulario.html">FORMULARIO</a></h1>
+    <h1><a href="Formulario.html">FORMULARIO</a></h1>
     <table border="1">
         <tr>
             <th>VIDEOS</th>
