--- a/Formulario.html
+++ b/Formulario.html
@@ -1,23 +1,24 @@
-<fieldset>
-    <Legend>Formulario</Legend>
+<FIeldset>
+    <LEgend>Formulario</LEgend>
     <form>
-       <label>Nombre</label><br>
-       <Input type="text" placeholder="Ingrese su Nombre"><br>
-       <label>Apellido</label><br>
-       <input type="text" placeholder="ingrese su Apellido"><br>
-       <label>Descripcion</label><br>
-       <textarea rows="4"></textarea><br>
-       <label>Fecha de Nacimiento</label><br>
-       <input type="date"><br>
-       <label>Enviar</label><br>
-       <input type="checkbox">
-       <label>ciudad</label><br>
-       <select>
-        <option>Beni</option>
-        <option>Cochabamba</option>
-        <option>Tarija</option>
-        <option></option>
-       </select><br>
-       <input type="submit" value="Enviar"></input>
+        <label>Nombre</label><br>
+        <INput type="text" placeholder="ingrese su nombre"></INput><br>
+        <label>Apellido</label><br>
+        <input type="text" placeholder="ingrese su apellido"><br>
+        <label>Descripcion</label><br>
+        <textarea rows="4"></textarea><br>
+        <label>Fecha De Nacimiento</label><br>
+        <input type="date"><br>
+        <label>Enviar</label>
+        <input type="checkbox"><br>
+        <label>Cuidad</label><br>
+        <select>
+            <option>COCHABAMBA</option>
+            <option>LA PAZ</option>
+            <option>CHUQUISACA</option>
+            <option>SANTA CRUZ</option>
+            <option>BENI</option>
+        </select><br>
+        <INput type="submit" value="Enviar"></INput>
     </form>
-</fieldset>
+</FIeldset>
